--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Mama cafe</h1>
-
+<div class="container">
+    <div class="center jumbotron">
+      <h1>Mama Cafe</h1>
+      <%= link_to "ログイン", login_path %>
+      <p>新規登録は<%= link_to "こちら", signup_path %>から</p>
+    </div>
+</div>
