--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,3 +12,8 @@
     </div>
   <% end %>
 </section>
+<div>
+  <% @posts.each do |post| %>
+    <%= link_to ( image_tag ( post.photo.url if post.photo?)), post_path %>
+  <% end %>
+</div>
