--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,16 +1,16 @@
-
-  <div class="container-fluid">
+<div class="container-fluid">
     <% if logged_in? %>
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-dark navbar-right">
         <li class="nav-item"><%= link_to "HOME", "/" %></li>
         <li class="nav-item"><%= link_to "マイページ", current_user %></li>
         <li class="nav-item"><%= link_to "投稿する", new_post_path %></li>
         <li class="nav-item"><%= link_to "ログアウト", logout_path, method: :delete %></li>
       </ul>
+
     <% else %>
       <ul class="nav navbar-nav navbar-right">
         <li class="nav-item"><%= link_to "HOME", "/" %></li>
         <li class="nav-item"><%= link_to "ログイン", login_path %></li>
     <% end %>
-  </div>
+</div>
 
