--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <%= render "shared/flash_messages" %>
-    <%= render "layouts/header" %>
+    <header>
+      <%= render "shared/flash_messages" %>
+      <%= render "layouts/header" %>
+    </header>
     <%= yield %>
+    <footer></footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </body>
 </html>
