--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -6,11 +6,11 @@
     <%= paginate @posts %>
   <% end %>
 <% else %>
-  <div class="jumbotron jumbotron-extend">
-    <div class="container-fluid jumbotron-container">
+  <div class='jumbotron jumbotron-extend'>
+    <div class='container-fluid jumbotron-container'>
       <h1>Mama Cafe</h1>
-      <p><%= link_to "はじめる", login_path, class: 'btn' %></p>
       <p><%= link_to "Mama cafe とは？", detail_path, class: 'btn' %></p>
+      <p><%= link_to "はじめる", login_path, class: 'btn' %></p>
     </div>
   </div>
 <% end %>
