--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,6 +14,6 @@
 </section>
 <div>
   <% @posts.each do |post| %>
-    <%= link_to ( image_tag ( post.photo.url if post.photo?)), post_path %>
+    <%# コメントアウト<%= link_to ( image_tag ( post.photo.url if post.photo?)), post_path %> %>
   <% end %>
 </div>
